<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:orientation="vertical"
    tools:context="com.manna.temperature.Visualizer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/degreeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/celsiusdegree80x80"
            android:contentDescription="@string/changeMeasure" />


    </RelativeLayout>


    <fragment
        android:id="@+id/fragment_container"
        android:name="com.manna.temperature.BlankFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:background="@drawable/weather80x80"
            android:contentDescription="@string/currentTemperature" />


        <ImageButton
            android:id="@+id/dashboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="100dp"
            android:background="@drawable/statistics80x80"
            android:contentDescription="@string/statisticsButton" />
    </RelativeLayout>
</LinearLayout>
